# aia-python-backend

./: .aia.pids  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CODING_GUIDE.md  Dockerfile  Dockerfile.agent  Dockerfile.backend  GAP_29Apr.md  README.md  SKILL.md  compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test_1779325120.docx  test_upload.docx  test_upload_2.docx
.github/: PULL_REQUEST_TEMPLATE.md
app/: __init__.py  config.py  main.py  test_main.py  worker.py
docs/: SDD_100pct_compliant_ECDP.docx  SDD_100pct_compliant_ECDP.md  SDD_Enterprise Cloud Data Platform_100pc.docx  SDD_Field Operations Mobile Application_50pc.docx  SDD_Legacy Batch Processing System Replacement_0pc.docx  adr-cost-model-phase-1.md  adr-cost-usage-doc-agent-index.md  adr-orchestrator-fan-out.md  adr-orchestrator-session-storage.md  cleanup-plan.md  corebackend-api.md  datapipeline-lambda-gap-analysis.md  datapipeline-reorganization-summary.md  db-schema.md  orchestrator-api.md  sharepoint-url-patterns.md  testing-agent.md
ecs/: README.md  taskdef-agent.json  taskdef-backend-stack.json
postman-collection/: aia.json
scripts/: cleanup_queues.py  mock_agent.py  mock_orchestrator.py  reset-datapipeline.ps1  reset-datapipeline.sh  start-aia.ps1  start-aia.sh  start-datapipeline-dev.sh  start-localstack.sh  start_dev_server.sh
tests/: conftest.py  test_agent_service.py  test_agent_worker.py  test_cost_usage_repository.py  test_cost_usage_router.py  test_cost_usage_service.py  test_document_repository.py  (+10 more)
(+401 files in other folders)
