[project]
name = "aia-backend"
version = "0.1.0"
description = "AIA Backend Service"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiobotocore>=2.13.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.9.0",
    "python-multipart>=0.0.12",
    "pyjwt>=2.10.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.15.0",
    "ruff>=0.11.0",
]

[tool.taskipy.tasks]
format = "uv run ruff format . && uv run ruff check . --fix"
